declarator/test/snippets/ok/headers/ts_module3.h
#pragma once

#include <TS.h>

#include "details/ts_module3_include.h"

namespace global IS_TS_MODULE
{

namespace stuffs IS_TS_NAMESPACE
{

class TS_EXPORT Entity
{
public:
    TS_METHOD Entity() = default;
    TS_METHOD void entity();
};

}   // namespace stuffs

}   // namespace global



